__kubernetes__/main/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-svc
spec:
  ports:
      - name: http
        port: 8080
        targetPort: 8080
  selector:
    app: main
  type: ClusterIP
