__kubernetes__/main/ingress.org.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-test
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
    rules:
      - host: "my-host.example.com"
        http:
          paths:
            - backend:
                  serviceName: main-svc
                  servicePort: 8080
              path: /
